Add template-folder as submodule in addons

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "addons/Visualize"]
 	path = addons/Visualize
 	url = https://github.com/CSharpGodotTools/Visualize
+[submodule "addons/Template"]
+	path = addons/Template
+	url = https://github.com/CSharpGodotTools/template-folder
