--- a/.editorconfig
+++ b/.editorconfig
@@ -37,6 +37,9 @@ dotnet_diagnostic.IDE0130.severity = none
 # Stop suggesting to make everything static due to Godot export members not being allowed to be static
 dotnet_diagnostic.CA1822.severity = none
 
+# IDE is suggesting to use readonly modifier on [Export] fields but you can't do this
+dotnet_diagnostic.IDE0044.severity = none
+
 # Stop warning about user defined suppressions
 dotnet_diagnostic.IDE0079.severity = none
 
