--- a/Template.csproj
+++ b/Template.csproj
@@ -10,9 +10,9 @@
     <!--Prevent use of the global usings feature-->
     <RootNamespace>Template</RootNamespace>
     <Nullable>disable</Nullable>
-    <!-- 'X' hides inherited member 'Y'. Use the new keyword if hiding was intended. -->
-    <!-- Consider the scenario where you want [OnInstantiate] for both derived and inherited types -->
-    <NoWarn>CS0108</NoWarn>
+    <!-- CS0108: 'X' hides inherited member 'Y'. Use the new keyword if hiding was intended. Consider the scenario where you want [OnInstantiate] for both derived and inherited types. -->
+    <!-- IDE0290: Use primary constructor. -->
+    <NoWarn>CS0108;IDE0290</NoWarn>
     <!-- We use $(DefineConstants); so we do not remove all existing constants -->
     <DefineConstants>$(DefineConstants);NETCODE_ENABLED</DefineConstants>
   </PropertyGroup>
