--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "addons/imgui-godot"]
 	path = addons/imgui-godot
 	url = https://github.com/CSharpGodotTools/imgui-godot-csharp
+[submodule "Framework"]
+	path = Framework
+	url = https://github.com/CSharpGodotTools/Framework
