--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Normalize EOL for all files that Git considers text files.
 * text=auto eol=lf
+*.tres text eol=lf
+*.translation binary
+*.import text eol=lf
