Packet source generators & make Profiler static

--- a/Template.csproj
+++ b/Template.csproj
@@ -23,8 +23,9 @@
     <PackageReference Include="ENet-CSharp" Version="2.4.8" Condition="!Exists('ENet-CSharp.dll')" />
     <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	<!-- https://github.com/Cat-Lips/GodotSharp.SourceGenerators -->
     <PackageReference Include="GodotSharp.SourceGenerators" Version="2.6.0" />
-    <!-- https://github.com/Cat-Lips/GodotSharp.SourceGenerators -->
+	<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
   </ItemGroup>
   <!-- Local Packages -->
   <ItemGroup>
@@ -42,6 +43,9 @@
 	<Reference Include="Visualize">
 		<HintPath>Framework/Libraries/Visualize.dll</HintPath>
 	</Reference>
+
+	<!-- PacketGen reference -->
+	<Analyzer Include="Framework/Libraries/PacketGen.dll" />
   </ItemGroup>
   <!-- Exclude obj and bin directories from subfolders -->
   <ItemGroup>
