--- a/Template.csproj
+++ b/Template.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Godot.NET.Sdk/4.6.0">
     <!-- Project Settings -->
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>13.0</LangVersion>
         <!--Required for ImGui-->
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <EnableDynamicLoading>true</EnableDynamicLoading>
@@ -10,10 +10,13 @@
         <ImplicitUsings>false</ImplicitUsings>
         <RootNamespace>Template</RootNamespace>
         <Nullable>disable</Nullable>
+        <!-- gdUnit4 requires this -->
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <!-- Disable warnings -->
         <!-- CS0108: 'X' hides inherited member 'Y'. Use the new keyword if hiding was intended. Consider the scenario where you want [OnInstantiate] for both derived and inherited types. -->
         <!-- IDE0290: Use primary constructor. -->
-        <NoWarn>CS0108;IDE0290</NoWarn>
+        <!-- NU1605: Disable warning of invalid/incompatible GodotSharp version (gdUnit4 recommends this) -->
+        <NoWarn>NU1605;CS0108;IDE0290</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -25,6 +28,15 @@
         <!-- https://github.com/Cat-Lips/GodotSharp.SourceGenerators -->
         <PackageReference Include="GodotSharp.SourceGenerators" Version="2.6.0" />
         <PackageReference Include="PacketGen" Version="1.1.2" />
+
+        <!-- gdUnit4 package dependencies -->
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+        <PackageReference Include="gdUnit4.api" Version="5.1.0-rc3" />
+        <PackageReference Include="gdUnit4.test.adapter" Version="3.0.0" />
+        <PackageReference Include="gdUnit4.analyzers" Version="1.0.0">
+            <PrivateAssets>none</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
 
         <!-- References -->
         <!-- This is required for other platforms where the ENet NuGet package is not enough -->
