--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Add local NuGet source
+        run: |
+          dotnet nuget add source "$GITHUB_WORKSPACE/Framework/Libraries" --name LocalNugets
+      
       - uses: godot-gdunit-labs/gdUnit4-action@v1
         with:
           godot-version: '4.6'
