--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,6 +9,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
+      - name: List repo contents
+        run: |
+          pwd
+          ls -R Framework
       
       - name: Debug repo layout
         run: |
