--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -8,22 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          submodules: recursive
           
-      - name: List repo contents
-        run: |
-          pwd
-          ls -R Framework
-      
-      - name: Debug repo layout
-        run: |
-          echo "Current dir: $(pwd)"
-          find . -type d | grep Framework/Libraries || echo "No Framework/Libraries dir found"
-      
-      - name: Add local NuGet source
-        run: |
-          dotnet nuget add source "$GITHUB_WORKSPACE/Framework/Libraries" --name LocalNugets
-      
       - uses: godot-gdunit-labs/gdUnit4-action@v1
         with:
           godot-version: '4.6'
