--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,6 +10,10 @@ jobs:
         with:
           submodules: recursive
           
+      - name: Find Godot executable
+        run: |
+          find $HOME -type f -name "Godot*4.6*mono*"
+          
       - uses: godot-gdunit-labs/gdUnit4-action@v1
         with:
           godot-version: '4.6'
