--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -17,3 +17,6 @@ jobs:
           godot-net: true
           paths: 'res://Setup/Testing'
           console-verbosity: 'normal'
+          publish-report: false
+          upload-report: true
+          report-name: test-report.xml
