--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ data_*/
 mono_crash.*.json
 *.DotSettings.user
 
+# gdUnit4
+TestResults/*
+!TestResults/.gdignore
+gdunit4_testadapter_v5/
+.runsettings
+
 # Visual Studio
 .vs/*
 Properties/*
