Add yml to filter in build_and_test.yml

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,6 +10,7 @@ on:
       - '**/*.import'
       - '**/*.csproj'
       - '**/*.sln'
+      - '**/*.yml'
       - 'NuGet.config'
       - 'project.godot'
 
