Update cat lips source gen

--- a/Template.csproj
+++ b/Template.csproj
@@ -26,7 +26,7 @@
         <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <!-- https://github.com/Cat-Lips/GodotSharp.SourceGenerators -->
-        <PackageReference Include="GodotSharp.SourceGenerators" Version="2.6.0" />
+        <PackageReference Include="GodotSharp.SourceGenerators" Version="2.7.0-260208-1601.Release" />
         <PackageReference Include="PacketGen" Version="1.1.7" />
 
         <!-- gdUnit4 package dependencies -->
