--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,8 @@ mono_crash.*.json
 *.DotSettings.user
 
 # gdUnit4
-TestResults/*
-!TestResults/.gdignore
-gdunit4_testadapter_v5/*
-!gdunit4_testadapter_v5/.gdignore
+TestResults/
+gdunit4_testadapter_v5/
 .runsettings
 
 # Visual Studio
