Fix incorrect addons path after name change

--- a/addons/SetupPlugin/plugin.cfg
+++ b/addons/SetupPlugin/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="Template Setup Plugin"
+name="Setup Plugin"
 description="Adds UI controls to start the setup process."
 author="Valkyrienyanko"
 version="1.0.0"
