--- a/Template.GodotUtils/GodotUtils.csproj
+++ b/Template.GodotUtils/GodotUtils.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Godot.NET.Sdk/4.5.1">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
@@ -20,6 +20,7 @@
 		<!-- JSON support -->
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+		<PackageReference Include="GodotSharp" Version="4.6.1" />
 	</ItemGroup>
 
 	<!-- Local ENet DLL -->
