Suppress all warnings from addon folders
This suppresses all warnings from all addons folders. I'm aware SetupPlugin is an addon but since I don't want to maintain a list of paths in the .editorconfig I'm just going to exclude the entire addons folder.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@
 root = true
 
 # Exclude addons from intellisense
-[addons/**/*.cs]
+[**/addons/**/*.cs]
 generated_code = true
 dotnet_analyzer_diagnostic.severity = none
 
