Converted setup plugin to GDScript

--- a/Template/addons/SetupPlugin/plugin.cfg
+++ b/Template/addons/SetupPlugin/plugin.cfg
@@ -4,4 +4,4 @@ name="Setup Plugin"
 description="Adds UI controls to start the setup process."
 author="Valkyrienyanko"
 version="1.0.0"
-script="TemplateSetupPlugin.cs"
+script="TemplateSetupPlugin.gd"
